--- a/data/gem-new/default/skeleton/Rakefile
+++ b/data/gem-new/default/skeleton/Rakefile
@@ -1,7 +1,7 @@
 $LOAD_PATH.unshift(File.expand_path('../rake/lib', __FILE__))
 Dir.glob(File.expand_path('../rake/tasks/**/*.{rake,task,rb}', __FILE__)) do |task_file|
   begin
-    require task_file
+    import task_file
   rescue LoadError => e
     warn "Failed to load task file #{task_file}"
     warn "  #{e.class} #{e.message}"
